Docs: Fix list spacing

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -182,7 +182,7 @@ table.field-list td.field-body {
 }
 .section ul > li {
     line-height: 1.5;
-    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 /* Table of contents */
